Fixed GetAll Method
